--- a/api-service/src/main/resources/application.properties
+++ b/api-service/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/DEV_TEST?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/DEV_TEST
 spring.datasource.username=root
 spring.datasource.password=Dev_Mysql123
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+
+
